<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.srgpanov.poker_rankings.View.MainActivity">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/choose_img"
        android:title="@string/choose_scrn"
        android:icon="@drawable/ic_photo_library_black_24dp"
        app:showAsAction="always"/>
</menu>
