<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/authorization_box"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/spacing_medium_32"


                android:fontFamily="sans-serif-medium"
                android:text="@string/login_header"
                android:textAllCaps="true"
                android:textColor="@color/accent"

                android:textSize="@dimen/font_medium_20"/>

            <View
                android:id="@+id/split"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/login_txt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/login_txt"
                android:background="@color/accent"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrap_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/login_txt"
                android:layout_below="@id/login_txt"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingRight="@dimen/spacing_medial_24">

                <EditText
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/login_mail_et_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:textSize="@dimen/font_small_14"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrap_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/login_txt"
                android:layout_below="@id/wrap_login_email"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingRight="@dimen/spacing_medial_24">

                <EditText
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/login_password_et_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:textSize="@dimen/font_small_14"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wrap_password_email"
                android:layout_centerHorizontal="true"
                android:background="@color/accent"
                android:minWidth="126dp"
                android:text="@string/login_btn"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small_14"
                />

            <TextView
                android:id="@+id/remember_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_normal_16"

                android:paddingBottom="@dimen/spacing_medial_24"
                android:text="@string/login_forgot_password"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/font_small_14"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>