<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    tools:context="com.srgpanov.poker_rankings.View.SettingActivity">

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|start"
        android:text="@string/setting_login"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/login_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/login_tv"
        android:layout_toRightOf="@id/login_tv"
        android:gravity="center_vertical|end"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_tv"

        android:gravity="center_vertical|start"
        android:text="@string/setting_password"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/password_tv"
        android:layout_toRightOf="@id/password_tv"
        android:gravity="center_vertical|end"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/folder_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/password_tv"
        android:gravity="center_vertical|start"
        android:text="@string/setting_path_to_folder"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/folder_catalog_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/folder_tv"
        android:layout_toRightOf="@id/folder_tv"
        android:gravity="center_vertical|end"
        android:textSize="16sp"/>


</RelativeLayout>
